<resources>
    <string name="app_name">Depression Study</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Username</string>
    <string name="login">Login</string>
    <string name="edit">Edit profile</string>
    <string name="record">Record audio</string>
    <string name="register">Register</string>
    <string name="btn_link_to_register">Sign up here.</string>
    <string name="btn_link_to_login">Login here</string>
    <string name="welcome">Welcome</string>
    <string name="logout">logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="description">This application collects your audio samples to study emotional state on the basis of voice tone.\nThis application uses network connection to upload your audio samples to secure server. Your profile information or audio samples will be used only for research purpose and will not be shared without permission.\n\nIf you agree, please press \"Continue\".
    </string>
    <string name="app_info">This is a simple audio recorder.</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="welcome_message">Over the last 2 weeks, how often have you been bothered by any of the following problems? </string>
    <string name="question1">1. Little interest or pleasure in doing things</string>
    <string name="question2">2. Feeling down, depressed, or hopeless</string>
    <string name="question3">3. Trouble falling or staying asleep, or sleeping too much</string>
    <string name="question4">4. Feeling tired or having little energy</string>
    <string name="question5">5. Poor appetite or overeating</string>
    <string name="question6">6. Feeling bad about yourself, or that you are a failure, or have let yourself or your family down</string>
    <string name="question7">7. Trouble concentrating on things, such as reading the newspaper or watching television</string>
    <string name="question8">8. Moving or speaking so slowly that other people could have noticed. Or the opposite being so fidgety or restless that you have been moving around a lot more than usual </string>
    <string name="question9">9. Thoughts that you would be better off dead or of hurting yourself in some way </string>

    <string name="answer1">Not at all</string>
    <string name="answer2">Several days</string>
    <string name="answer3">More than half the days</string>
    <string name="answer4">Nearly everyday</string>
    <string name="submit_button">Submit</string>

    <string name="question_gender">1. Gender:</string>
    <string name="question_age">2. Date of birth:</string>
    <string name="question_origin">3. People in Canada come from many racial or cultural groups. You may belong to more than one group on the following list. Are you:</string>
    <string name="question_language">4. Please specify your level of fluency in English communication (speak, understand, read, and write):</string>
    <string name="question_education">5. Education level (highest completed, or currently being ongoing)</string>
    <string name="question_depression">6. Have you ever been diagnosed with depression?</string>
    <string name="question_medication">7. Do you currently take any medications for depression?</string>
</resources>
